2008-03-18  Dan Nicolaescu  <dann@ics.uci.edu>

	* font-lock.el (font-lock-comment-face): Set the foreground for
	the light background 8 colors case.

	* vc-bzr.el (vc-bzr-print-log): Insert a file marker.  Run the log
	command for each file in the list.
	(vc-bzr-log-view-mode): Recognize the file marker.
	(vc-bzr-show-log-entry): Make regexp match more cases.

2008-03-18  Wilson Snyder  <wsnyder@wsnyder.org>

	* verilog-mode.el (verilog-read-decls): Fix AUTOINPUT/AUTOOUTPUT
	mis-including genvars.

2008-03-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-bzr.el (vc-bzr-log-view-mode, vc-bzr-annotate-command)
	(vc-bzr-annotate-time, vc-bzr-annotate-extract-revision-at-line):
	Revision numbers can include ".".

	* diff-mode.el (diff-end-of-hunk): Be careful not to overlook trailing
	"+" lines not accounted for by counting "-" and context lines.

2008-03-16  Juri Linkov  <juri@jurta.org>

	* dired.el (dired-warn-writable): Rename to `dired-perm-write'.
	(dired-perm-write): Rename from `dired-warn-writable'.
	Change parent face from `font-lock-warning-face' to
	`font-lock-comment-delimiter-face'.
	(dired-warn-writable-face): Rename to `dired-perm-write-face'.
	(dired-perm-write-face): Rename from `dired-warn-writable-face'.
	(dired-font-lock-keywords): Replace `dired-warn-writable-face'
	with `dired-perm-write-face'.

2008-03-16  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* term/mac-win.el (mac-service-open-file): Use file URL instead of
	file name string.

2008-03-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-bzr.el (vc-bzr-registered): Fail if `bzr' is not installed.
	(vc-bzr-annotate-command): Preserve line alignment.
	(vc-bzr-annotate-time): Accept space used to preserve alignment.

2008-03-13  Richard Stallman  <rms@gnu.org>

	* mouse.el (mouse-yank-secondary): Nice error msg if no secondary sel.

	* emacs-lisp/advice.el (defadvice): Add usage pattern.

2008-03-11  Chong Yidong  <cyd@stupidchicken.com>
